# aurorae

./: .bandit  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yaml  .~lock.dados-pagamentos.xlsx#  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE.txt  README.md  cnab240_file.py  cnab240_writer.py  core.py  data_handler.py  dev-requirements.txt  exceptions.py  febraban_v10.7.py  febraban_v10_7.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  snippet.py  spreadsheet_handler.py  testing_cnab240_v3.txt  writer_cnab.py
.github/: pull_request_template.md
.github/workflows/: actions.yaml
aurorae/: __main__.py
aurorae/cnab240/: base.py  writer.py
aurorae/payroll/: models.py
aurorae/providers/: exceptions.py  utils.py
aurorae/sample/: spreadsheet_sample.xlsx
cnab/: __main__.py
cnab/cnab240/: base.py  writer.py
cnab/legacy/: febraban_v10_7.py  writer_cnab_old.py
cnab/payroll/: models.py
cnab240/: base.py  writer.py
cnab240/lambdas/: v10_7.py
cnab240/v10_7/: lambdas.py  main.py  models.py  spreadsheet_map.py
connectors/: parser.py  utils.py  worksheet_handler.py
connectors/legacy_spreadsheet/: handler.py  mapping.py  parser.py  spreadsheet_handler.py  utils.py  validators.py  worksheet_handler.py
connectors/spreadsheet/: spreadsheet_map.py
connectors/tests/: conftest.py  test_worksheet_handler.py
docs/: conf.py  index.rst  requirements.txt
docs/adr/: 0001_typed_connectors.md  0002_cnab_architecture_pydantic.md  0003_ubiquitous_language_of_cnab_fields.md  0004_payment_amount_format.md  README.md
docs/dev/: authors.rst  release_process.rst
docs/guide/: install.rst  introduction.rst  usage.rst
docs/rfc/: 2021_06_25_typed_connectors.md
generated_files/: cnab240-2021-06-21T11:31:53.913096.txt  cnab240-2021-06-21T11:31:53.914105.html  test.txt
legacy/: writer_cnab_old.py
providers/: utils.py
providers/api/: main.py
sample/: aurorae-cnab240-sample-file.html  aurorae-cnab240-sample-file.txt  legacy_spreadsheet_sample.xlsx  spreadsheet_sample.xlsx
staticfiles/: styles.css
tests/: conftest.py  test_base_config.py  test_cnab_models.py  test_legacy_spreadsheet.py  test_models.py  test_payroll_models.py  test_types.py  test_validators.py  test_worksheet_handler.py
tmp/: all_input_fields.json  custom_fields_report.json  spreadsheet_fields_report.json
(+37 files in other folders)
